[tool.poetry]
name = "firstproject"
version = "0.1.0"
description = ""
authors = ["Áller Augusto de Souza <allerasouza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
pyspark = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
